--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,11 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
-
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
